apps/dev/microk8s/www.bestbounty.ru/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.bestbounty.microk8s.conn-me.ru"
spec:
  rules:
  - host: bestbounty.microk8s.conn-me.ru
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - www.bestbounty.microk8s.conn-me.ru
    secretName: https-secret
  rules:
  - host: www.bestbounty.microk8s.conn-me.ru
    http:
      paths:
      - pathType: Prefix
        path: /images
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /video
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /helpdesk_ticket_attaches
        backend:
          service:
            name: images-service
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
  name: adminer-ingress
spec:
  rules:
  - host: adminer.bestbounty.microk8s.conn-me.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: adminer-service
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: goaccess-ingress
spec:
  rules:
  - host: goaccess.bestbounty.microk8s.conn-me.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goaccess-service
            port:
              number: 80
